Finish layout and routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - 3000:3000
     depends_on:
       - db
+      - chrome
     tty: true
     stdin_open: true
   db:
@@ -17,5 +18,9 @@ services:
       - db-volume:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
+  chrome:
+    image: selenium/standalone-chrome:latest
+    ports:
+      - 4444:4444
 volumes:
   db-volume:
